<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Notes Doppelkopf</string>

    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="bocks_remaining">Bocks remaining:</string>
    <string name="double_bocks_remaining">Double Bocks remaining:</string>
    <string name="continue_text">continue</string>
    <string name="ok">OK</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_main">DoppelKopf Notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DoppelKopf Notes</string>
    <string name="nav_header_subtitle">Becker Games</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="settings_bocks_none">None</string>
    <string name="settings_bocks_single">Single</string>
    <string name="settings_bocks_double">Double</string>
    <string name="maximum_bocks">Maximum Bocks:</string>
    <string name="bocks_in_solo">Bocks in Solo</string>
    <string name="group_name">Group Name</string>
    <string name="create">Create</string>
    <string name="group_image">Group Image</string>
    <string name="select_winners">Select Winners:</string>
    <string name="points">Points</string>
    <string name="bocks">Bocks</string>
    <string name="submit">Submit</string>
    <string name="group_name_required">Group Name (*)</string>
    <string name="table_info" formatted="true">"%1$s deals. %2$d Bocks and %3$d Double Bocks remaining. "</string>
    <string name="sample_player_names">Florian, Anja, Joachim, Tobias, Ulf, Renate</string>
    <string name="sample_rounds">12 Rounds</string>
    <string name="sample_date">Jan 24, 2019</string>
    <string name="table_round_index">#</string>
    <string name="sample_player_name">Robert</string>
    <string name="table_bock">B</string>
    <string name="game_create_fragment_title">Create new Game</string>
    <string name="error_minimum_4_players">Select at least 4 players</string>
    <string name="error_db_id_not_set">Database Id not set</string>
    <string name="error_winners">There must be 1, 2 or 3 winners</string>
    <string name="error_more_than_6_players">Only 6 Players per Game supported</string>
    <string name="game_select_fragment_title">Select a Game</string>
    <string name="error_party_not_set">No Party selected</string>
    <string name="new_round_fragment_title">New Round</string>
    <string name="error_required_field_not_initialized">Please fill out all required fields (*)</string>
    <string name="party_create_fragment_title">Create New Group</string>
    <string name="party_select_fragment_title">Select a Group</string>
    <string name="settings_frament_title">Settings</string>
    <string name="table_fragment_title">DoppelKopf Notes</string>
    <string name="save">Save</string>
    <string name="select_group_image">Select Group Image</string>
    <string name="game_table">Table</string>
    <string name="new_round">New Round</string>
    <string name="rounds_played">" Rounds"</string>
    <string name="error_points_empty">Please enter the points for this round.</string>
    <string name="repeat_round">Repeat Round</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="confirmation_delete_group">Are you sure you want to delete this Group?</string>
    <string name="delete_group_title">Delete Group</string>
    <string name="group_deleted">Group deleted.</string>
    <string name="player">Player</string>
    <string name="player_required" translatable="false">(*)</string>
    <string name="player_optional">(opt.)</string>
    <string name="delete_last">Delete Last</string>
    <string name="round_deleted">Round deleted.</string>
    <string name="delete_round_title">Delete last Round</string>
    <string name="confirmation_delete_round">Are you sure you want to delete the last Round?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="seating">Seating</string>
    <string name="delete_game_title">Delete Game</string>
    <string name="confirmation_delete_game">Are you sure you want to delete this game?</string>
    <string name="game_deleted">Game deleted.</string>
    <string name="game_edit_fragment_title">Edit Game</string>
    <string name="party_edit_fragment_title">Edit Group</string>
    <string name="confirmation_delete_player">Are you sure you want to delete this player?</string>
    <string name="delete_player_title">Delete Player</string>
    <string name="message_cannot_delete_player">Cannot delete Player because he played Games already!</string>
    <string name="add_new_player">Add new Player</string>
    <string name="edit_group">Edit Group</string>
    <string name="edit_game">Edit Game</string>
    <string name="edit_settings">Edit Settings</string>
    <string name="error_player_field_empty">Existing Player\'s name cannot be empty!</string>
    <string name="rounds">Rounds</string>
    <string name="overall">Difference</string>
    <string name="won">Won</string>
    <string name="lost">Lost</string>
    <string name="stats">Statistics</string>
    <string name="solos">Solos</string>


</resources>
